# ac

./: .env.example  .gitattributes  .gitignore  Cargo.toml  README.md  report.csv
ac_core/: Cargo.toml
ac_core/src/: backtest.rs  data.rs  lib.rs  okx.rs  strategy.rs  utils.rs
ac_core/src/data/: okx.rs
ac_core/src/strategy/: calc.rs  executors.rs  single_ticker.rs
ac_core/src/strategy/single_ticker/: ofi_momentum.rs
data_center/: Cargo.toml  import_remote.sql  init_db.sql  instrument_profiles.toml
data_center/.sqlx/: query-91b88acaf580682c77945091596bdcf40b572116da503dfe3690b50cff45e776.json
data_center/src/: instruments_profile.rs  lib.rs  okx_api.rs  sql.rs  terminal.rs  types.rs  utils.rs
data_center/src/okx_api/: actions.rs  pushes.rs  terminal.rs  types.rs
data_center/tests/: retrieve_data.rs
strategy_core/: Cargo.toml
strategy_core/src/: univariate.rs
utils/: Cargo.toml
utils/src/: lib.rs
