[package]
name = "ac_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
arrayvec = "0.7.6"
async-stream = "0.3.6"
chrono = "0.4.41"
csv = "1.3.1"
data_center = { version = "0.1.0", path = "../data_center" }
float-cmp = "0.10.0"
futures = "0.3.31"
ordered-float = "5.0.0"
pin-project = "1.1.10"
rustc-hash = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
statrs = "0.18.0"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
utils = { version = "0.1.0", path = "../utils" }
