[package]
name = "data_center"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
derive-new = "0.7.0"
dotenvy = "0.15.7"
futures = "0.3.31"
futures-util = { version = "0.3.31", default-features = false, features = ["sink"] }
lazy_static = "1.5.0"
pin-project = "1.1.10"
rustls = "0.23.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.45.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-native-roots"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
utils = { version = "0.1.0", path = "../utils" }

