[package]
name = "data_center"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
arrayvec = { version = "0.7.6", features = ["serde"] }
async-stream = "0.3.6"
chrono = "0.4.41"
derive-new = "0.7.0"
dotenvy = "0.15.7"
either = "1.15.0"
futures = "0.3.31"
futures-util = { version = "0.3.31", default-features = false, features = ["sink"] }
once_cell = "1.21.3"
pin-project = "1.1.10"
rustc-hash = "2.1.1"
rustls = "0.23.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }
serde_plain = "1.0.2"
smartstring = { version = "1.0.1", features = ["serde"] }
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.45.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-native-roots"] }
toml = "0.8.22"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
utils = { version = "0.1.0", path = "../utils" }

