[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
futures = "0.3.31"
pin-project = "1.1.10"
tokio = { version = "1.45.0"}
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tungstenite = "0.26.2"